tests/scan/fixtures/validation/negative/clean_nuget_typosquat_unique/CleanLib.cs
namespace ZzzMarkerNugetNegative;

public class CleanLib
{
    public int Add(int a, int b) => a + b;
}
